# generic-mmu

./: .gitignore  Cargo.toml  LICENSE-MIT  NOTES.md  build.rs  diagram.json  espflash.toml  wokwi.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
docs/: README.md
profiles/ankermake/: m5.md
scripts/: flash.sh  run.sh
src/: filament_changer.rs  main.rs  net.rs  web.rs
