[package]
name = "mmu"
version = "0.1.0"
authors = ["Eduardo Eidelwein Berlitz <eberlitz@everest-erp.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.14.1", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.21.1", features = ["esp32"] }
esp-println = { version = "0.12.0", features = ["esp32", "log"] }
log = { version = "0.4.21" }
esp-alloc = { version = "0.5.0" }
embedded-io = "0.6.1"
esp-wifi = { version = "0.10.1", features = [
    "esp32",
    "phy-enable-usb",
    "utils",
    "wifi",
    "async",
    "embassy-net",
] }
heapless = { version = "0.8.0", default-features = false }
smoltcp = { version = "0.11.0", default-features = false, features = [
    "medium-ethernet",
    "proto-dhcpv4",
    "proto-igmp",
    "proto-ipv4",
    "socket-dhcpv4",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }
esp-hal-embassy = { version = "0.4.0", features = ["esp32"] }
embassy-executor = { version = "0.6.0", features = ["task-arena-size-12288"] }
embassy-time = { version = "0.3.2", features = ["generic-queue-8"] }
embassy-net = { version = "0.4.0", features = [
    "tcp",
    "udp",
    "dhcpv4",
    "medium-ethernet",
] }
picoserve = { version = "0.12.2", features = ["embassy"] }
embassy-sync = "0.6.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"


[profile.dev.package.esp-wifi]
opt-level = 3


[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
