[package]
name = "mmu"
version = "0.1.0"
authors = ["Eduardo Eidelwein Berlitz <eberlitz@gmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
esp-backtrace = { version = "0.14", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.22", features = ["esp32"] }
esp-println = { version = "0.12", features = ["esp32", "log"] }
log = { version = "0.4" }
esp-alloc = { version = "0.5" }
embassy-executor = { version = "0.6", features = ["task-arena-size-12288"] }
embassy-time = { version = "0.3", features = ["generic-queue-8"] }
esp-hal-embassy = { version = "0.5", features = ["esp32"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
