# generic-mmu
# Copyright (C) 2024  eberlitz`

# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.

# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.

# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

[package]
name = "mmu"
version = "0.1.0"
authors = ["Eduardo Eidelwein Berlitz <eberlitz@gmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
esp-backtrace = { version = "0.14", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.22", features = ["esp32"] }
esp-println = { version = "0.12", features = ["esp32", "log"] }
log = { version = "0.4" }
esp-alloc = { version = "0.5" }
embassy-executor = { version = "0.6", features = ["task-arena-size-12288"] }
embassy-time = { version = "0.3", features = ["generic-queue-8"] }
esp-hal-embassy = { version = "0.5", features = ["esp32"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
